Issue #282 - Removing xpadding on full-bleeds.

--- a/scss/base/_full_bleed.scss
+++ b/scss/base/_full_bleed.scss
@@ -5,7 +5,7 @@
   box-shadow: 0 0 0 100vmax var(--full-bleed-bg-color);
   clip-path: inset(0 -100vmax);
   background-color: var(--full-bleed-bg-color);
-  padding: $spacer;
+  padding: $spacer 0;
 }
 
 .full-bleed--slate-light {
